--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,18 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_music">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="me.kyledunne.kylesmusicreviewsapp.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/nav_music"
+        android:name="me.kyledunne.kylesmusicreviewsapp.ui.music.MusicFragment"
+        android:label="@string/menu_music"
+        tools:layout="@layout/fragment_music" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="me.kyledunne.kylesmusicreviewsapp.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_golf"
+        android:name="me.kyledunne.kylesmusicreviewsapp.ui.golf.GolfFragment"
+        android:label="@string/menu_golf"
+        tools:layout="@layout/fragment_golf" />
 
 </navigation>
