--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -16,5 +16,16 @@
         android:name="me.kyledunne.kylesmusicreviewsapp.ui.golf.GolfFragment"
         android:label="@string/menu_golf"
         tools:layout="@layout/fragment_golf" />
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="me.kyledunne.kylesmusicreviewsapp.SettingsFragment"
+        android:label="fragment_settings"
+        tools:layout="@layout/fragment_settings" />
+    <action android:id="@+id/action_global_settingsFragment" app:destination="@id/settingsFragment" />
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="me.kyledunne.kylesmusicreviewsapp.AboutFragment"
+        android:label="fragment_about"
+        tools:layout="@layout/fragment_about" /><action android:id="@+id/action_global_aboutFragment" app:destination="@id/aboutFragment"/>
 
 </navigation>
