--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,13 +8,13 @@
     <fragment
         android:id="@+id/nav_music"
         android:name="me.kyledunne.kylesmusicreviewsapp.ui.music.MusicFragment"
-        android:label="@string/menu_music"
+        android:label="@string/music"
         tools:layout="@layout/fragment_music" />
 
     <fragment
         android:id="@+id/nav_golf"
         android:name="me.kyledunne.kylesmusicreviewsapp.ui.golf.GolfFragment"
-        android:label="@string/menu_golf"
+        android:label="@string/golf"
         tools:layout="@layout/fragment_golf" />
     <fragment
         android:id="@+id/settingsFragment"
